# exam_client

./: README.md  empty.html  index.html  lock.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: main.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  exam_config.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
